Added basic css style and calculator buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
 </head>
 <body>
   <div class="container">
-    <div class="calculator-frame"></div>
+    <div class="calculator-frame">
+      <div class="display">0.0</div>
+      <div class="keyboard">
+        <div class="keys">1</div>
+        <div class="keys">2</div>
+        <div class="keys">3</div>
+        <div class="keys">+</div>
+        <div class="keys">4</div>
+        <div class="keys">5</div>
+        <div class="keys">6</div>
+        <div class="keys">-</div>
+        <div class="keys">7</div>
+        <div class="keys">8</div>
+        <div class="keys">9</div>
+        <div class="keys">*</div>
+        <div class="keys">.</div>
+        <div class="keys">0</div>
+        <div class="keys">=</div>
+        <div class="keys">/</div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
