Added clicklable numbered buttons

--- a/index.html
+++ b/index.html
@@ -4,31 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
   <link rel="stylesheet" href="style.css">
   <title>Calculator</title>
 </head>
 <body>
   <div class="container">
-    <div class="calculator-frame">
-      <div class="display">0.0</div>
-      <div class="keyboard">
-        <div class="keys">1</div>
-        <div class="keys">2</div>
-        <div class="keys">3</div>
-        <div class="keys">+</div>
-        <div class="keys">4</div>
-        <div class="keys">5</div>
-        <div class="keys">6</div>
-        <div class="keys">-</div>
-        <div class="keys">7</div>
-        <div class="keys">8</div>
-        <div class="keys">9</div>
-        <div class="keys">*</div>
-        <div class="keys">.</div>
-        <div class="keys">0</div>
-        <div class="keys">=</div>
-        <div class="keys">/</div>
+    <div id="calculator-frame">
+      <div id="display">0.0</div>
+      <div id="keyboard">
+        <button class="keys num">1</button>
+        <button class="keys num">2</button>
+        <button class="keys num">3</button>
+        <button class="keys">+</button>
+        <button class="keys num">4</button>
+        <button class="keys num">5</button>
+        <button class="keys num">6</button>
+        <button class="keys">-</button>
+        <button class="keys num">7</button>
+        <button class="keys num">8</button>
+        <button class="keys num">9</button>
+        <button class="keys">*</button>
+        <button class="keys">.</button>
+        <button class="keys num">0</button>
+        <button class="keys">=</button>
+        <button class="keys">/</button>
+        <button class="keys">A/C</button>
+        <button class="keys">%</button>
       </div>
     </div>
   </div>
