--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
         <button class="keys num">1</button>
         <button class="keys num">2</button>
         <button class="keys num">3</button>
-        <button class="keys">+</button>
+        <button class="keys operator">+</button>
         <button class="keys num">4</button>
         <button class="keys num">5</button>
         <button class="keys num">6</button>
-        <button class="keys">-</button>
+        <button class="keys operator">-</button>
         <button class="keys num">7</button>
         <button class="keys num">8</button>
         <button class="keys num">9</button>
-        <button class="keys">*</button>
+        <button class="keys operator">*</button>
         <button class="keys">.</button>
         <button class="keys num">0</button>
         <button class="keys">=</button>
-        <button class="keys">/</button>
+        <button class="keys operator">/</button>
         <button class="keys">A/C</button>
         <button class="keys">%</button>
       </div>
