Reworked design of the calculator

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
   <title>Calculator</title>
 </head>
 <body>
@@ -16,28 +19,28 @@
         <div id="lower-number">0</div>
       </div>
       <div id="keyboard">
-        <button class="keys num">1</button>
-        <button class="keys num">2</button>
-        <button class="keys num">3</button>
-        <button class="keys operator">+</button>
+        <button class="keys num small-item">1</button>
+        <button class="keys num small-item">2</button>
+        <button class="keys num small-item">3</button>
+        <button class="keys operator small-item">+</button>
 
-        <button class="keys num">4</button>
-        <button class="keys num">5</button>
-        <button class="keys num">6</button>
-        <button class="keys operator">-</button>
+        <button class="keys num small-item">4</button>
+        <button class="keys num small-item">5</button>
+        <button class="keys num small-item">6</button>
+        <button class="keys operator small-item">-</button>
 
-        <button class="keys num">7</button>
-        <button class="keys num">8</button>
-        <button class="keys num">9</button>
-        <button class="keys operator">*</button>
+        <button class="keys num small-item">7</button>
+        <button class="keys num small-item">8</button>
+        <button class="keys num small-item">9</button>
+        <button class="keys operator small-item">*</button>
 
-        <button class="keys">.</button>
-        <button class="keys num">0</button>
-        <button class="keys" id="equals">=</button>
-        <button class="keys operator">/</button>
+        <button class="keys small-item" id="point">.</button>
+        <button class="keys num small-item">0</button>
+        <button class="keys small-item" id="percent">%</button>
+        <button class="keys operator small-item">/</button>
         
-        <button class="keys" id="clear">A/C</button>
-        <button class="keys" id="percentage">%</button>
+        <button class="keys big-item" id="clear">C</button>
+        <button class="keys big-item" id="equals">=</button>
       </div>
     </div>
   </div>
