Added proper decimal and signflip functions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
   <title>Calculator</title>
 </head>
 <body>
@@ -36,7 +36,7 @@
 
         <button class="keys small-item" id="point">.</button>
         <button class="keys num small-item">0</button>
-        <button class="keys small-item" id="percent">%</button>
+        <button class="keys small-item" id="plus-minus">+/-</button>
         <button class="keys operator small-item">/</button>
         
         <button class="keys big-item" id="clear">C</button>
