--- a/index.html
+++ b/index.html
@@ -13,36 +13,41 @@
 </head>
 <body>
   <div class="container">
+
     <div id="calculator-frame">
+
       <div id="display">
         <div id="upper-number"></div>
         <div id="lower-number">0</div>
       </div>
+
       <div id="keyboard">
-        <button class="keys num small-item">1</button>
-        <button class="keys num small-item">2</button>
-        <button class="keys num small-item">3</button>
-        <button class="keys operator small-item">+</button>
+        <button class="keys num">1</button>
+        <button class="keys num">2</button>
+        <button class="keys num">3</button>
+        <button class="keys operator">+</button>
 
-        <button class="keys num small-item">4</button>
-        <button class="keys num small-item">5</button>
-        <button class="keys num small-item">6</button>
-        <button class="keys operator small-item">-</button>
+        <button class="keys num">4</button>
+        <button class="keys num">5</button>
+        <button class="keys num">6</button>
+        <button class="keys operator">-</button>
 
-        <button class="keys num small-item">7</button>
-        <button class="keys num small-item">8</button>
-        <button class="keys num small-item">9</button>
-        <button class="keys operator small-item">*</button>
+        <button class="keys num">7</button>
+        <button class="keys num">8</button>
+        <button class="keys num">9</button>
+        <button class="keys operator">*</button>
 
-        <button class="keys small-item" id="point">.</button>
-        <button class="keys num small-item">0</button>
-        <button class="keys small-item" id="plus-minus">+/-</button>
-        <button class="keys operator small-item">/</button>
+        <button class="keys" id="point">.</button>
+        <button class="keys num">0</button>
+        <button class="keys" id="plus-minus">+/-</button>
+        <button class="keys operator">/</button>
         
-        <button class="keys big-item" id="clear">C</button>
-        <button class="keys big-item" id="equals">=</button>
+        <button class="keys" id="clear">C</button>
+        <button class="keys" id="equals">=</button>
       </div>
+
     </div>
+
   </div>
 </body>
 </html>
