Title and footer added

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
-  <title>Calculator</title>
+  <title>Calculator By Pidzi</title>
 </head>
 <body>
   <div class="container">
-
+    <div class="title">Calculator App <br><span>PIDZI</span></div>
     <div id="calculator-frame">
 
       <div id="display">
@@ -47,7 +47,10 @@
       </div>
 
     </div>
-
+    <div class="footer">
+      <div>© Made by Marek Truska</div> 
+      <div><a href="https://github.com/pidzi247" target="_blank">https://github.com/pidzi247</a></div> 
+      <div><a href="mailto:truskamarek@centrum.sk?subject=contacting you&body=message">truskamarek@centrum.sk</a></div>
   </div>
 </body>
 </html>
