--- a/index.html
+++ b/index.html
@@ -22,28 +22,34 @@
       </div>
 
       <div id="keyboard">
-        <button class="keys num">1</button>
-        <button class="keys num">2</button>
-        <button class="keys num">3</button>
-        <button class="keys operator">+</button>
-
-        <button class="keys num">4</button>
-        <button class="keys num">5</button>
-        <button class="keys num">6</button>
-        <button class="keys operator">-</button>
-
-        <button class="keys num">7</button>
-        <button class="keys num">8</button>
-        <button class="keys num">9</button>
-        <button class="keys operator">*</button>
-
-        <button class="keys" id="point">.</button>
-        <button class="keys num">0</button>
-        <button class="keys" id="plus-minus">+/-</button>
-        <button class="keys operator">/</button>
-        
-        <button class="keys" id="clear">C</button>
-        <button class="keys" id="equals">=</button>
+        <div class="row top">
+          <button class="keys num">1</button>
+          <button class="keys num">2</button>
+          <button class="keys num">3</button>
+          <button class="keys operator">+</button>
+        </div>
+        <div class="row 2">
+          <button class="keys num">4</button>
+          <button class="keys num">5</button>
+          <button class="keys num">6</button>
+          <button class="keys operator">-</button>
+        </div>
+        <div class="row mid">
+          <button class="keys num">7</button>
+          <button class="keys num">8</button>
+          <button class="keys num">9</button>
+          <button class="keys operator">*</button>
+        </div>
+        <div class="row 4">
+          <button class="keys" id="point">.</button>
+          <button class="keys num">0</button>
+          <button class="keys" id="plus-minus">+/-</button>
+          <button class="keys operator">/</button>
+        </div>
+        <div class="row bot">
+          <button class="keys" id="clear">C</button>
+          <button class="keys" id="equals">=</button>
+        </div>
       </div>
 
     </div>
