Refactor and reformatting

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
   <div class="container">
     <div class="title">Calculator App <br><span>PIDZI</span></div>
-    <div id="calculator-frame">
+    <div id="calculatorFrame">
 
       <div id="display">
-        <div id="upper-number"></div>
-        <div id="lower-number">0</div>
+        <div id="upperNumber"></div>
+        <div id="lowerNumber">0</div>
       </div>
 
       <div id="keyboard">
@@ -42,7 +42,7 @@
         <div class="row 4">
           <button class="keys" id="point">.</button>
           <button class="keys num">0</button>
-          <button class="keys" id="plus-minus">+/-</button>
+          <button class="keys" id="plusMinus">+/-</button>
           <button class="keys operator">/</button>
         </div>
         <div class="row bot">
